[#130554095] Fix Chrome text overflow issue

--- a/src/components/InlineEdit/style.scss
+++ b/src/components/InlineEdit/style.scss
@@ -116,7 +116,7 @@
     font-size: 10px;
     font-weight: 200;
     position: absolute;
-    bottom: -8px;
+    top: 20px;
   }
 
   .save-button {
